--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,7 +40,7 @@ about:
   license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
-  doc_url: https://github.com/conda/conda-package-streaming/blob/main/README.md
+  doc_url: https://conda.github.io/conda-package-streaming/
   dev_url: https://github.com/conda/conda-package-streaming
 
 extra:
