--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,7 +36,7 @@ test:
 
 about:
   home: https://github.com/conda/conda-package-streaming
-  summary: Download metadata from conda packages without transferring entire file.
+  summary:  An efficient library to read from new and old format .conda and .tar.bz2 conda packages.
   license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
