--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "conda-package-streaming" %}
-{% set version = "0.7.0" %}
+{% set version = "0.8.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,18 +7,19 @@ package:
 
 source:
   url: https://github.com/conda/conda-package-streaming/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: 87be2b1c365a0e04d15579b9137b139f0837c52198bdba21c5ac071fc13efd75
+  sha256: 5e5212153e285a48223c70ede741d00304725a11cb690c494464a12f04c607f5
 
 build:
   number: 0
   skip: True  # [py<37]
-  script: {{ PYTHON }} -m pip install --no-build-isolation . -vv
+  script: {{ PYTHON }} -m pip install --no-deps --no-build-isolation . -vv
 
 requirements:
   host:
     - flit-core
     - python
     - pip
+    - wheel
   run:
     - python
     - zstandard >=0.15
@@ -37,6 +38,8 @@ test:
 about:
   home: https://github.com/conda/conda-package-streaming
   summary:  An efficient library to read from new and old format .conda and .tar.bz2 conda packages.
+  description: |
+    An efficient library to read from new and old format .conda and .tar.bz2 conda packages.
   license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
