--- a/abs.yaml
+++ b/abs.yaml
@@ -1,2 +1,4 @@
+channels:
+  - https://staging.continuum.io/prefect/fs/requests-feedstock/pr15/f2f2cf0
 build_env_vars:
   ANACONDA_ROCKET_ENABLE_PY313 : yes
